--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url('graduation_img.jpg');
+            background-image: url('beautiful_cy.jpg');
             background-size: cover;
             background-position: center;
         }
