--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
             padding: 0;
             font-family: Arial, sans-serif;
             background-image: url('beautiful_cy.jpg');
-            background-size: cover;
+            background-size: cover no-repeat;
             background-position: center;
+
         }
 
         .background {
